--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,22 +1,83 @@
+.slider-item {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
+  height: 450px;
+}
+.slider-item .slider-item__bcg {
+  background-color: rgba(0, 0, 0, 0.25);
+  height: 100%;
+  position: relative;
+}
+.slider-item .slider-item__bcg .slider-info {
+  display: flex;
+  flex-direction: column;
+  width: 418px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 100px;
+}
+.slider-item .slider-item__bcg .slider-info .head-title {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 40px;
+  margin-bottom: 24px;
+}
+.slider-item .slider-item__bcg .slider-info .title {
+  color: #fff;
+  line-height: 25px;
+}
+
+#slide-1 {
+  background-image: url("../assets/slider/slider-01.jpg");
+}
+
+#slide-2 {
+  background-image: url("../assets/slider/slider-02.jpg");
+}
+
+.slick-dots {
+  bottom: 30px !important;
+}
+.slick-dots li {
+  margin: 0 3px;
+}
+.slick-dots li.slick-active button:before {
+  background-color: #fff;
+  opacity: 1 !important;
+}
+.slick-dots li button:before {
+  width: 10px !important;
+  height: 10px !important;
+  color: transparent !important;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5 !important;
+}
+.slick-dots li button:hover:before {
+  opacity: 1 !important;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #root {
-    background-color: #f5f5f5;
-    font-family: Roboto, sans-serif;
-}
-
-.widgets {
-    display: flex;
-    flex-direction: column;
+  background-color: #f5f5f5;
+  font-family: Roboto, sans-serif;
 }
 
 .row {
-    width: 1200px;
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
+  width: 1200px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
 }
+
+.widgets {
+  display: flex;
+  flex-direction: column;
+}/*# sourceMappingURL=App.css.map */
