--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,5 @@
 @import 'slider';
+@import 'category';
 
 * {
     margin: 0;
@@ -6,9 +7,28 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #5f6d92;
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #e5e5e5;
+    box-shadow: 0px 0px 3px #ffffff inset;
+}
+
 #root {
     background-color: #f5f5f5;
     font-family: Roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
+    color: #333333;
 }
 
 .row {
@@ -16,11 +36,4 @@
     display: flex;
     align-items: center;
     margin: 0 auto;
-}
-
-
-
-.widgets {
-    display: flex;
-    flex-direction: column;
 }
