--- a/src/styles/_category.scss
+++ b/src/styles/_category.scss
@@ -1,7 +1,7 @@
 .category {
     width: 1200px;
     align-self: center;
-    margin-top: 50px;
+    margin: 50px 0;
 
     .title {
         font-size: 30px;
