create catalog component

--- a/src/styles/_category.scss
+++ b/src/styles/_category.scss
@@ -54,6 +54,7 @@
             height: 350px;
             background-color: #fff;
             position: relative;
+            cursor: pointer;
 
             .card-title {
                 padding: 25px 55px;
