--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -105,6 +105,7 @@
   height: 350px;
   background-color: #fff;
   position: relative;
+  cursor: pointer;
 }
 .category .slick-slider .card .card-title {
   padding: 25px 55px;
@@ -150,6 +151,167 @@
   color: #fff;
   font-size: 45px;
   text-transform: uppercase;
+}
+
+.catalog {
+  width: 1200px;
+  margin-top: 50px;
+  align-self: center;
+  padding: 0 20px;
+}
+.catalog .title {
+  font-size: 30px;
+  text-align: center;
+  margin: 30px 0;
+}
+.catalog .slick-slider .slick-arrow {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  z-index: 10;
+  transition: all 0.5s ease-out;
+  background-color: #fff;
+}
+.catalog .slick-slider .slick-arrow::before {
+  content: "";
+  display: block;
+  height: 18px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-image: url("../assets/category_slider/slider_btn.svg");
+}
+.catalog .slick-slider .slick-arrow:hover {
+  background-color: #cccccc;
+}
+.catalog .slick-slider .slick-prev {
+  left: 25px;
+}
+.catalog .slick-slider .slick-prev::before {
+  transform: rotate(180deg);
+}
+.catalog .slick-slider .slick-next {
+  right: 22px;
+}
+.catalog .slick-slider .slick-slide {
+  padding: 25px 15px;
+}
+.catalog .slick-slider .card {
+  min-height: 385px;
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
+}
+.catalog .slick-slider .card:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+}
+.catalog .slick-slider .card:hover > .hidden-block {
+  visibility: visible;
+  padding: 0 10px;
+}
+.catalog .slick-slider .card:hover .main-img {
+  opacity: 0 !important;
+}
+.catalog .slick-slider .card:hover .additional-img {
+  opacity: 1 !important;
+}
+.catalog .slick-slider .card .visible-block {
+  height: 100%;
+  background-color: #fff;
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.catalog .slick-slider .card .visible-block .card-img {
+  width: 85%;
+  transition: 0.25s opacity ease-in;
+}
+.catalog .slick-slider .card .visible-block .card-img.main-img {
+  opacity: 1;
+}
+.catalog .slick-slider .card .visible-block .card-img.additional-img {
+  opacity: 0;
+  position: absolute;
+}
+.catalog .slick-slider .card .visible-block .card-title {
+  padding: 15px 0;
+  font-size: 15px;
+}
+.catalog .slick-slider .card .visible-block .card-price {
+  padding: 15px 0;
+  font-weight: bold;
+}
+.catalog .slick-slider .card .hidden-block {
+  background-color: #fff;
+  visibility: hidden;
+  padding-bottom: 4px !important;
+  width: 100%;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line {
+  display: flex;
+  flex-wrap: wrap;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-img__wrapper {
+  width: 50px;
+  height: 50px;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-img__wrapper .product-mdf-img {
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 2px;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-txt {
+  height: 30px;
+  min-width: 50px;
+  font-size: 11px;
+  text-overflow: ellipsis;
+  padding: 7px;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-item {
+  position: relative;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  border: 1px solid #666;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: unset;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-item::after {
+  content: "";
+  display: none;
+  width: 18px;
+  height: 18px;
+  background-size: 8px;
+  right: -8px;
+  top: -8px;
+  background-color: #5f6d92;
+  background-image: url("../assets/catalog/check-marks.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 50%;
+  position: absolute;
+  border: 1px solid #fff;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-item:hover, .catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-item.product-mdf-item-current {
+  border-color: transparent;
+  outline: 2px solid #5f6d92;
+  border-radius: 0;
+}
+.catalog .slick-slider .card .hidden-block .modifications-choose-line .product-mdf-item.product-mdf-item-current::after {
+  display: block;
+}
+.catalog .slick-slider .card .product-buy-block button {
+  margin: 6px 0 !important;
+  width: 100%;
+  background-color: #5f6d92;
+  color: #fff;
+  transition: 0s !important;
 }
 
 * {
