--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -322,6 +322,7 @@
 
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -339,9 +340,12 @@
 #root {
   background-color: #f5f5f5;
   font-family: Roboto, sans-serif;
+  color: #333333;
+}
+
+.app {
   display: flex;
   flex-direction: column;
-  color: #333333;
 }
 
 .row {
