--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,6 +11,7 @@
 
 ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -28,9 +29,12 @@
 #root {
     background-color: #f5f5f5;
     font-family: Roboto, sans-serif;
+    color: #333333;
+}
+
+.app {
     display: flex;
     flex-direction: column;
-    color: #333333;
 }
 
 .row {
