create blog component

--- a/src/components/UI/header/MyHeader.module.css
+++ b/src/components/UI/header/MyHeader.module.css
@@ -6,6 +6,11 @@
     padding: 15px 0;
 }
 
+.header__content {
+    align-items: center;
+    margin: 0 auto;
+}
+
 .header__content > * {
     padding-right: 10px;
 }
