--- a/src/styles/_category.scss
+++ b/src/styles/_category.scss
@@ -1,7 +1,7 @@
 .category {
-    width: 1200px;
     align-self: center;
     margin: 50px 0;
+    flex-direction: column;
 
     .title {
         font-size: 30px;
