--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -60,9 +60,9 @@
 }
 
 .category {
-  width: 1200px;
   align-self: center;
   margin: 50px 0;
+  flex-direction: column;
 }
 .category .title {
   font-size: 30px;
@@ -154,9 +154,9 @@
 }
 
 .catalog {
-  width: 1200px;
   margin-top: 50px;
   align-self: center;
+  flex-direction: column;
   padding: 0 20px;
 }
 .catalog .title {
@@ -314,6 +314,68 @@
   transition: 0s !important;
 }
 
+.blog {
+  align-self: center;
+  flex-direction: column;
+}
+.blog .title {
+  text-align: center;
+  margin: 15px 0 30px;
+  font-size: 30px;
+}
+.blog .card__wrapper {
+  display: flex;
+}
+.blog .card__wrapper .card {
+  margin: 0 15px 30px;
+  max-width: 31%;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  transition: 1s all ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.blog .card__wrapper .card .card-name {
+  padding: 0 25px;
+  margin: 20px 0 10px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 150%;
+}
+.blog .card__wrapper .card .card-description {
+  padding: 0 25px;
+  font-size: 13px;
+  color: #64727a;
+  line-height: 150%;
+}
+.blog .card__wrapper .card .btn-block {
+  width: 60%;
+  margin: 20px 0;
+  padding: 0 25px;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #5f6d92;
+  font-weight: 700;
+  line-height: 150%;
+}
+.blog .card__wrapper .card .btn-block span {
+  float: right;
+  font-size: 23px;
+  padding-right: 10px;
+  margin-top: -3px;
+  transition: 1s all ease;
+}
+.blog .card__wrapper .card:hover {
+  transform: translateY(-3px);
+  cursor: pointer;
+}
+.blog .card__wrapper .card:hover .btn-block span {
+  padding-right: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -351,6 +413,4 @@
 .row {
   width: 1200px;
   display: flex;
-  align-items: center;
-  margin: 0 auto;
 }/*# sourceMappingURL=App.css.map */
