--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,7 +1,7 @@
 .catalog {
-    width: 1200px;
     margin-top: 50px;
     align-self: center;
+    flex-direction: column;
     padding: 0 20px;
 
     .title {
