--- a/src/components/UI/navbar/MyNavbar.module.css
+++ b/src/components/UI/navbar/MyNavbar.module.css
@@ -12,7 +12,14 @@
 
 .nav__item {
     font-size: 13px;
-    padding-right: 10px;
+    padding-right: 15px;
     text-transform: uppercase;
     font-weight: 600;
+    text-decoration: none;
+    color: #333;
+    transition: 1s all ease;
+}
+
+.nav__item:hover {
+    color: rgb(95, 109, 146);
 }
