--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -56,6 +56,7 @@
             display: flex !important;
             flex-direction: column;
             align-items: center;
+            overflow: hidden;
 
             &:hover {
                 box-shadow: 0 0 10px 0 rgb(0 0 0 / 25%);
