--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,12 +31,6 @@
   color: #fff;
   line-height: 25px;
 }
-.simple-slider #slide-1 {
-  background-image: url("../assets/slider/slider-01.jpg");
-}
-.simple-slider #slide-2 {
-  background-image: url("../assets/slider/slider-02.jpg");
-}
 .simple-slider .slick-dots {
   bottom: 30px !important;
 }
@@ -384,6 +378,7 @@
   align-self: center;
 }
 .shop_container .sidebar {
+  height: 100%;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -589,6 +584,153 @@
 }
 .shop_container .products-block .products-block-header .title {
   font-size: 35px;
+}
+.shop_container .products-block .products {
+  display: flex;
+  flex-wrap: wrap;
+}
+.shop_container .products-block .products .card {
+  width: 31.03%;
+  margin: 0 10px 30px;
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.shop_container .products-block .products .card::before {
+  content: "";
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+.shop_container .products-block .products .card.shortBefore:hover::before {
+  height: 120%;
+}
+.shop_container .products-block .products .card:hover {
+  z-index: 999;
+}
+.shop_container .products-block .products .card:hover::before {
+  display: block;
+  width: 112%;
+  height: 144%;
+  top: -10px;
+}
+.shop_container .products-block .products .card:hover .visible-block .card-img.only {
+  transform: scale(1.025);
+}
+.shop_container .products-block .products .card:hover .hidden-block {
+  visibility: visible;
+  padding: 0 10px;
+}
+.shop_container .products-block .products .card:hover .main-img {
+  opacity: 0 !important;
+}
+.shop_container .products-block .products .card:hover .additional-img {
+  opacity: 1 !important;
+}
+.shop_container .products-block .products .card .visible-block {
+  height: 100%;
+  background-color: #fff;
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.shop_container .products-block .products .card .visible-block .card-img {
+  cursor: pointer;
+  width: 82%;
+  transition: 0.25s opacity ease-in;
+}
+.shop_container .products-block .products .card .visible-block .card-img.main-img {
+  opacity: 1;
+}
+.shop_container .products-block .products .card .visible-block .card-img.additional-img {
+  opacity: 0;
+  position: absolute;
+}
+.shop_container .products-block .products .card .visible-block .card-title {
+  padding: 15px 0;
+  font-size: 15px;
+}
+.shop_container .products-block .products .card .visible-block .card-price {
+  padding: 15px 0;
+  font-weight: bold;
+}
+.shop_container .products-block .products .card .hidden-block {
+  position: absolute;
+  top: 392px;
+  visibility: hidden;
+  padding-bottom: 4px !important;
+  width: 100%;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line {
+  display: flex;
+  flex-wrap: wrap;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-img__wrapper {
+  width: 50px;
+  height: 50px;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-img__wrapper .product-mdf-img {
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 2px;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-txt {
+  height: 30px;
+  min-width: 50px;
+  font-size: 11px;
+  text-overflow: ellipsis;
+  padding: 7px;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-item {
+  position: relative;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  border: 1px solid #666;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: unset;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-item::after {
+  content: "";
+  display: none;
+  width: 18px;
+  height: 18px;
+  background-size: 8px;
+  right: -8px;
+  top: -8px;
+  background-color: #5f6d92;
+  background-image: url("../assets/catalog/check-marks.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 50%;
+  position: absolute;
+  border: 1px solid #fff;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-item:hover, .shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-item.product-mdf-item-current {
+  border-color: transparent;
+  outline: 2px solid #5f6d92;
+  border-radius: 0;
+}
+.shop_container .products-block .products .card .hidden-block .modifications-choose-line .product-mdf-item.product-mdf-item-current::after {
+  display: block;
+}
+.shop_container .products-block .products .card .product-buy-block button {
+  margin: 6px 0 !important;
+  width: 100%;
+  background-color: #5f6d92;
+  color: #fff;
+  transition: 0s !important;
 }
 
 * {
