--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -2,6 +2,7 @@
     align-self: center;
 
     .sidebar {
+        height: 100%;
         background-color: #fff;
         display: flex;
         flex-direction: column;
