--- a/src/styles/_productsBlock.scss
+++ b/src/styles/_productsBlock.scss
@@ -119,6 +119,12 @@
                     .modifications-choose-line {
                         display: flex;
                         flex-wrap: wrap;
+                        margin-bottom: 5px;
+
+                        .product-mdf-color__block {
+                            width: 30px;
+                            height: 30px;
+                        }
     
                         .product-mdf-img__wrapper {
                             width: 50px;
