--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -109,6 +109,7 @@
                         .item {
                             display: flex;
                             user-select: none;
+                            cursor: pointer;
 
                             &:hover {
                                 .title-box .checkbox {
