--- a/src/components/UI/pagination/Pagination.module.css
+++ b/src/components/UI/pagination/Pagination.module.css
@@ -1,6 +1,6 @@
 .pagination {
     width: 100%;
-    margin: 30px 0;
+    margin-top: 30px;
     padding: 10px 0;
     display: flex;
     justify-content: center;
