--- a/src/styles/_productsBlock.scss
+++ b/src/styles/_productsBlock.scss
@@ -20,7 +20,7 @@
                 .sort-filter {
                     display: flex;
 
-                    & > span {
+                    &>span {
                         padding: 5px 10px;
                         font-size: 15px;
                     }
@@ -38,7 +38,7 @@
                         background-color: #ccc !important;
                     }
                 }
-                
+
                 .filter {
                     cursor: pointer;
                     display: inline-block;
@@ -83,7 +83,7 @@
                         &::before {
                             transform: rotate(45deg);
                         }
-    
+
                         &::after {
                             transform: rotate(-45deg);
                         }
@@ -140,9 +140,11 @@
                     }
 
                     .visible-block {
-                        .card-img {
-                            &.only {
-                                transform: scale(1.025);
+                        .img__wrapper {
+                            .card-img {
+                                &.only {
+                                    transform: scale(1.025);
+                                }
                             }
                         }
                     }
@@ -169,18 +171,27 @@
                     align-items: center;
                     position: relative;
 
-                    .card-img {
-                        cursor: pointer;
-                        width: 82%;
-                        transition: .25s opacity ease-in;
+                    .img__wrapper {
+                        position: relative;
+                        width: 100%;
+                        height: 292px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
 
-                        &.main-img {
-                            opacity: 1;
-                        }
+                        .card-img {
+                            cursor: pointer;
+                            width: 82%;
+                            transition: .25s opacity ease-in;
 
-                        &.additional-img {
-                            opacity: 0;
-                            position: absolute;
+                            &.main-img {
+                                opacity: 1;
+                            }
+
+                            &.additional-img {
+                                opacity: 0;
+                                position: absolute;
+                            }
                         }
                     }
 
